application now runs and is ready for refactor

--- a/server/package.json
+++ b/server/package.json
@@ -6,16 +6,21 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
+    "dev": "npx nodemon",
     "start": "node dist/server.js",
     "watch": "nodemon dist/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "seed": "node dist/seeds/seed.js"
+  },
+  "nodemonConfig": {
+    "watch": ["src"],
+    "ext": "ts,json,js",
+    "exec": "npx tsc && node dist/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^4.0.1",
-    "brcypt": "^1.0.1",
+    "bcrypt": "^1.0.1",
     "express": "^4.19.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^8.0.0"
