--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,9 @@
     "seed": "node dist/seeds/seed.js"
   },
   "nodemonConfig": {
-    "watch": ["src"],
+    "watch": [
+      "src"
+    ],
     "ext": "ts,json,js",
     "exec": "npx tsc && node dist/server.js"
   },
@@ -20,8 +22,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^1.0.1",
+    "@apollo/server": "^4.10.4",
+    "bcrypt": "^5.1.1",
     "express": "^4.19.2",
+    "graphql": "^16.9.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^8.0.0"
   },
