--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -8,18 +8,20 @@
 
     /* Bundler mode */
     "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
+    "noEmit": false, /* Set to false to allow file generation */
     "jsx": "react-jsx",
 
     /* Linting */
     "strict": true,
+    "outDir": "./dist", /* Ensure all emitted files go to the dist folder */
+    "rootDir": "./src", /* Specify the source folder */
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
   "include": ["src"],
+  "exclude": ["node_modules", "dist"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
