--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,8 @@
   },
   "dependencies": {
     "@apollo/client": "^3.10.6",
-    "graphql": "^16.9.0",
     "bootstrap": "^5.2.3",
+    "graphql": "^16.9.0",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
@@ -20,15 +20,17 @@
     "react-router-dom": "^6.11.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@typescript-eslint/eslint-plugin": "^7.13.1",
+    "@typescript-eslint/parser": "^7.13.1",
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.38.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
-    "@typescript-eslint/eslint-plugin": "^7.13.1",
-    "@typescript-eslint/parser": "^7.13.1",
     "vite": "^5.1.6"
   }
 }
