--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "tsc",
     "dev": "npx nodemon",
-    "start": "node dist/server.js",
+    "start": "npm run build && node dist/server.js --ignore client",
     "watch": "nodemon dist/server.js",
     "seed": "node dist/seeds/seed.js"
   },
