--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,10 @@
   "compilerOptions": {
     /* Language and Environment */
     "target": "ES2020", /* Set the JavaScript language version for emitted JavaScript */
-    "lib": ["ES2020"],
-
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "jsx": "react-jsx",
+    "outDir": "./dist",        // Specify output folder
+    "rootDir": "./src",        // Specify source folder
     /* Modules */
     "module": "ESNext", /* Specify what module code is generated */
     "moduleResolution": "bundler", /* Specify how TypeScript looks up a file from a given module specifier */
@@ -28,6 +30,6 @@
     "noImplicitOverride": true, /* Ensure overriding members in derived classes are marked with an override modifier */
     "useUnknownInCatchVariables": true /* Ensure 'unknown' is used for catch clause*/
   },
-"include": ["src"],
+"include": ["server/src/**/*", "client/src/**/*"],
   "exclude": ["node_modules", "dist"]
 }
