server working again after render debug

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,28 +1,19 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "useDefineForClassFields": true,
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
-
-    /* Bundler mode */
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": false, /* Set to false to allow file generation */
+    "noEmit": true,
     "jsx": "react-jsx",
-
-    /* Linting */
     "strict": true,
-    "outDir": "./dist", /* Ensure all emitted files go to the dist folder */
-    "rootDir": "./src", /* Specify the source folder */
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
   "include": ["src"],
-  "exclude": ["node_modules", "dist"],
-  "references": [{ "path": "./tsconfig.node.json" }],
-  "typeRoots": ["./node_modules/@types", "./src/types"]
+  "references": [{ "path": "./tsconfig.node.json" }]
 }
