--- a/server/package.json
+++ b/server/package.json
@@ -7,16 +7,13 @@
   "scripts": {
     "build": "tsc",
     "dev": "npx nodemon",
-    "start": "npm run build && node dist/server.js --ignore client",
+    "start": "node dist/server.js",
     "watch": "nodemon dist/server.js",
     "seed": "node dist/seeds/seed.js"
   },
   "nodemonConfig": {
-    "watch": [
-      "src"
-    ],
-    "ext": "ts,json,js",
-    "exec": "npx tsc && node dist/server.js"
+    "watch": ["src"],
+    "ext": "ts,json,js"
   },
   "keywords": [],
   "author": "",
